include required crates.io metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@
 name = "cidrr"
 version = "0.1.0"
 authors = ["Stuart Hicks <contact@stuarthicks.me>"]
+description = "CLI tool for expanding CIDR blocks into lists of IP addresses"
+license = "Apache 2.0"
+license-file = "LICENSE"
+documentation = "https://github.com/stuarthicks/cidrr"
+homepage = "https://github.com/stuarthicks/cidrr"
+repository = "https://github.com/stuarthicks/cidrr"
 
 [dependencies]
 docopt = "0.6.67"
