--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "cidrr"
 version = "0.1.0"
 authors = ["Stuart Hicks <contact@stuarthicks.me>"]
 description = "CLI tool for expanding CIDR blocks into lists of IP addresses"
-license = "Apache 2.0"
+license = "Apache License 2.0"
 license-file = "LICENSE"
 documentation = "https://github.com/stuarthicks/cidrr"
 homepage = "https://github.com/stuarthicks/cidrr"
