update crate homepage to crates.io listing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "CLI tool for expanding CIDR blocks into lists of IP addresses"
 license = "Apache-2.0"
 license-file = "LICENSE"
 documentation = "https://github.com/stuarthicks/cidrr"
-homepage = "https://github.com/stuarthicks/cidrr"
+homepage = "https://crates.io/crates/cidrr"
 repository = "https://github.com/stuarthicks/cidrr"
 
 [dependencies]
