pull latest docopt, hit everything with a stick until it compiles again

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ homepage = "https://crates.io/crates/cidrr"
 repository = "https://github.com/stuarthicks/cidrr"
 
 [dependencies]
-docopt = "0.6.67"
+docopt = "0.6"
+rustc-serialize = "0.3"
