update travis config to match latest guidelines

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
 language: rust
 
-sudo: false
+rust:
+  - stable
+  - beta
+  - nightly
 
-addons:
-  apt:
-    packages:
-      - libcurl4-openssl-dev
-      - libelf-dev
-      - libdw-dev
-
-cache:
-    apt: true
-    directories:
-        - target/debug/deps
-        - target/debug/build
+matrix:
+  allow_failures:
+    - rust: nightly
 
 after_success: |
   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-  tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make && make install DESTDIR=../tmp && cd ../.. &&
+  tar xzf master.tar.gz &&
+  mkdir kcov-master/build &&
+  cd kcov-master/build && c
+  make .. &&
+  make &&
+  make install DESTDIR=../tmp &&
+  cd ../.. &&
   ls target/debug &&
   ./kcov-master/tmp/usr/local/bin/kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/cidrr-*
